# lectures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
arrays/: CMakeLists.txt
arrays/config/: Doxyfile.in
arrays/include/: catch.hpp  csc232.h  expanded_templates.h
arrays/resource/: csc232_clion_cpp_code_style.xml
arrays/src/: main.cpp
arrays/test/: test.cpp
